--- a/static/sass/_settings.scss
+++ b/static/sass/_settings.scss
@@ -3,3 +3,5 @@ $color-aubergine: #77216f;
 $color-hero: #252525;
 $theme-default-nav: dark;
 $breakpoint-navigation-threshold: 940px;
+// update documentation sidebar width for deeper nesting
+$l-documentation-sidebar-width: 18rem;
