--- a/templates/docs/document.html
+++ b/templates/docs/document.html
@@ -2,7 +2,9 @@
 
 {% block title %}{{ document.title }} | Mir-server documentation{% endblock %}
 
-{% block content %}
+{% set is_docs = True %}
+{% block body_class %}{# override default l-site with empty class #}{% endblock %}
+{% block body %}
 
 {% macro create_navigation(nav_items, expandable=False, expanded=False) %}
   <ul class="p-side-navigation__list">
@@ -44,60 +46,114 @@
   </ul>
 {% endmacro %}
 
-<section id="search-docs" class="p-strip--light is-shallow">
-  <div class="row">
-    <form class="p-search-box u-no-margin--bottom" action="/docs/search">
-      <input type="search" class="p-search-box__input" name="q" {% if query %}value="{{ query }}"{% endif %} placeholder="Search documentation" required/>
-      <button type="button" class="p-search-box__reset" alt="reset" onclick="this.previousElementSibling.value = '';this.previousElementSibling.focus()"><i class="p-icon--close">Reset</i></button>
-      <button type="submit" class="p-search-box__button" alt="search"><i class="p-icon--search">Search</i></button>
-    </form>
+<div class="l-docs">
+  <div class="l-docs__header">
+    {% include "partial/_navigation.html" %}
+    <section id="search-docs" class="p-strip is-shallow is-bordered l-docs__subgrid">
+      <div class="l-docs__main">
+        <div class="row">
+          <form class="p-search-box u-no-margin--bottom" action="/docs/search">
+            <input type="search" class="p-search-box__input" name="q" {% if query %}value="{{ query }}"{% endif %} placeholder="Search documentation" required/>
+            <button type="button" class="p-search-box__reset" alt="reset" onclick="this.previousElementSibling.value = '';this.previousElementSibling.focus()"><i class="p-icon--close">Reset</i></button>
+            <button type="submit" class="p-search-box__button"><i class="p-icon--search">Search</i></button>
+          </form>
+        </div>
+      </div>
+    </section>
   </div>
-</section>
 
-<div class="p-strip is-shallow">
-  <div class="row">
-    <aside class="col-3">
-      <div class="p-side-navigation--raw-html" id="drawer">
-        <a href="#drawer" class="p-side-navigation__toggle js-drawer-toggle" aria-controls="drawer">
-          Toggle side navigation
-        </a>
-        <div class="p-side-navigation__overlay js-drawer-toggle" aria-controls="drawer"></div>
+  <div class="l-docs__sidebar">
+    <div class="l-docs__sticky-container">
+      <nav data-js="navigation" class="p-side-navigation" id="{{ navigation['path'] or 'default' }}" style="margin-top: 0.5rem">
+        <div class="u-hide--large p-strip is-shallow">
+          <div class="u-fixed-width">
+            <a href="#{{ navigation['path'] or 'default' }}" class="p-side-navigation__toggle js-drawer-toggle" aria-controls="{{ navigation['path'] or 'default' }}">
+              Toggle side navigation
+            </a>
+          </div>
+        </div>
+        <div class="p-side-navigation__overlay js-drawer-toggle" aria-controls="{{ navigation['path'] or 'default' }}"></div>
         <div class="p-side-navigation__drawer">
           <div class="p-side-navigation__drawer-header">
-            <a href="#" class="p-side-navigation__toggle--in-drawer js-drawer-toggle" aria-controls="drawer">
+            <a href="#" class="p-side-navigation__toggle--in-drawer js-drawer-toggle" aria-controls="{{ navigation['path'] or 'default' }}">
               Toggle side navigation
             </a>
           </div>
           {% for nav_group in navigation.nav_items %}
+          {% if not nav_group.hidden %}
             {% if nav_group.navlink_text %}
               {% if nav_group.navlink_href %}
-              <h3>
-                <a href="{{ nav_group.navlink_href }}" {% if request.path == nav_group.navlink_href %}aria-current="page"{% endif %}>
+              <h3 class="p-side-navigation__heading--linked">
+                <a class="p-side-navigation__link" href="{{ nav_group.navlink_href }}" {% if nav_group.is_active %}aria-current="page"{% endif %}>
                   {{ nav_group.navlink_text }}
                 </a>
               </h3>
               {% else %}
-                <h3>{{ nav_group.navlink_text }}</h3>
+                <h3 class="p-side-navigation__heading">{{ nav_group.navlink_text }}</h3>
               {% endif %}
             {% endif %}
-            {{ create_navigation(nav_group.children) }}
-          {% endfor %}
+            {#
+              Use `create_navigation(nav_group.children)` for a default, fully expanded navigation.
+              Use `create_navigation(nav_group.children, expandable=True)` for the nested nav levels to expand only when parent page is active.
+            #}
+            {{ create_navigation(nav_group.children, expandable=True) }}
+          {% endif %}
+        {% endfor %}
+        </div>
+      </nav>
+    </div>
+  </div>
+
+  <div class="l-docs__title">
+    <div class="u-fixed-width">
+      {% if document.title %}
+      <div class="p-section--shallow u-no-padding--top">
+        <h1 class="u-no-margin--bottom">{{ document.title }}</h1>
+      </div>
+      {% endif %}
+    </div>
+  </div>
+
+  {% if document.headings_map is defined and document.headings_map|length > 0 %}
+    <div class="l-docs__meta">
+      <div class="l-docs__sticky-container">
+        <aside class="p-table-of-contents">
+          <div class="p-table-of-contents__section">
+            <h4 class="p-table-of-contents__header">On this page</h4>
+            <nav class="p-table-of-contents__nav" aria-label="Table of contents">
+              <ul class="p-table-of-contents__list">
+                {% for heading in document.headings_map %}
+                <li class="p-table-of-contents__item"><a class="p-table-of-contents__link" href="#{{ heading.heading_slug }}">{{ heading.heading_text }}</a></li>
+                {% endfor %}
+              </ul>
+            </nav>
+          </div>
+        </aside>  
+      </div>
+    </div>
+  {% endif %}
+
+
+  <div class="l-docs__main u-text-max-width">
+    <main class="u-fixed-width">
+      <div class="p-strip is-shallow" style="overflow: visible;">
+      {{ document.body_html | safe }}
+      </div>
+
+      <div class="p-strip is-shallow">
+        <div class="p-notification--information">
+          <div class="p-notification__content">
+            <p class="p-notification__message">Last updated {{ document.updated }}. <a href="{{ forum_url }}{{ document.topic_path }}">Help improve this document in the forum</a>.</p>
+          </div>
         </div>
       </div>
-    </aside>
-
-    <main class="col-9" id="main-content">
-      <h1>{{ document.title }}</h1>
-      {{ document.body_html | safe }}
-			<div class="p-strip is-shallow">
-				<div class="p-notification--information">
-					<p class="p-notification__content">
-						Last updated {{ document.updated }}. <a href="{{ forum_url }}{{ document.topic_path }}">Help improve this document in the forum</a>.
-					</p>
-				</div>
-			</div>
     </main>
   </div>
+
+  <div class="l-docs__footer">
+    {% include "partial/_footer.html" %}
+  </div>
 </div>
+
 <script src="{{ versioned_static('js/build/side-navigation.js') }}" defer></script>
-{% endblock %}
+{% endblock body %}
