--- a/templates/partial/_navigation.html
+++ b/templates/partial/_navigation.html
@@ -5,7 +5,7 @@
       <div class="p-navigation__logo-tag">
         <img class="p-navigation__logo-icon" src="https://assets.ubuntu.com/v1/82818827-CoF_white.svg" alt="">
       </div>
-      <span class="p-navigation__logo-title">Canonical Mir Display Server</span>
+      <span class="p-navigation__logo-title">Mir Display Server</span>
     </a>
   </div>
   <a href="#navigation" class="p-navigation__toggle--open" title="menu">Menu</a>
