--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -56,7 +56,7 @@
     {% block head_extra %}{% endblock %}
     <link rel="stylesheet" href="/static/css/styles.css" />
     <script src="{{ versioned_static('js/build/global-nav/global-nav.js') }}"></script>
-    <script src="{{ versioned_static('js/build/cookie-policy/cookie-policy.js') }}"></script>
+    <script src="{{ versioned_static('js/build/cookie-policy.js') }}"></script>
   </head>
   <body class="{% block body_class %}l-site{% endblock %}">
     <!-- Google Tag Manager (noscript) -->
