fix: Add `is-dark` to link on /ubuntu-frame

--- a/templates/ubuntu-frame.html
+++ b/templates/ubuntu-frame.html
@@ -11,7 +11,7 @@
       <h1>Simplify the development of embedded displays</h1>
       <p>Ubuntu Frame is a reliable and secure display server for embedded Linux devices with long term support. Simple to configure, simple to deploy.</p>
       <p><a href="https://assets.ubuntu.com/v1/713b9224-Ubuntu.Frame.Datasheet.pdf" class="p-button--positive">Get the Ubuntu Frame datasheet</a></p>
-      <p><a class="p-link--inverted" href="https://ubuntu.com/engage/Embedding_IoT_GUI_with_Ubuntu_Frame">Learn how to develop GUIs for IoT with our developer guide&nbsp;&rsaquo;</a></p>
+      <p><a class="p-link--inverted is-dark" href="https://ubuntu.com/engage/Embedding_IoT_GUI_with_Ubuntu_Frame">Learn how to develop GUIs for IoT with our developer guide&nbsp;&rsaquo;</a></p>
     </div>
   </div>
 </section>
