--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -12,6 +12,13 @@
     </title>
     <!-- GitHub buttons -->
     <script defer src="https://buttons.github.io/buttons.js"></script>
+    <!-- Cookie policy -->
+    <script src="{{ versioned_static('js/build/cookie-policy.js') }}"></script>
+    <script>
+      if (typeof cpNs !== "undefined") {
+        cpNs.cookiePolicy();
+      }
+    </script>
     <!-- Google Tag Manager -->
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
   new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -56,7 +63,6 @@
     {% block head_extra %}{% endblock %}
     <link rel="stylesheet" href="/static/css/styles.css" />
     <script src="{{ versioned_static('js/build/global-nav/global-nav.js') }}"></script>
-    <script src="{{ versioned_static('js/build/cookie-policy.js') }}"></script>
   </head>
   <body class="{% block body_class %}l-site{% endblock %}">
     <!-- Google Tag Manager (noscript) -->
@@ -136,10 +142,7 @@ function sendEvent(category, origin, destination, label) {
   }
 }
     </script>
-    <script>
-  if (typeof cpNs !== "undefined") {
-      cpNs.cookiePolicy();
-    }
+    <script>  
   if (typeof canonicalGlobalNav !== "undefined") {
     canonicalGlobalNav.createNav({breakpoint: 940});
   }
