--- a/templates/partial/_navigation.html
+++ b/templates/partial/_navigation.html
@@ -20,7 +20,7 @@
       <a href="/ubuntu-frame/" class="p-navigation__link">Ubuntu Frame</a>
     </li>
     <li class="p-navigation__item {% if '/tutorials' in request.path %}is-selected{% endif %}" role="menuitem">
-      <a href="/tutorials/" class="p-navigation__link">Tutorials</a>
+      <a href="/docs/tutorials/" class="p-navigation__link">Tutorials</a>
     </li>
     <li class="p-navigation__item {% if '/docs' in request.path %}is-selected{% endif %}">
       <a class="p-navigation__link" href="/docs">Docs</a>
