navigation: fix Community link

--- a/templates/partial/_navigation.html
+++ b/templates/partial/_navigation.html
@@ -26,7 +26,7 @@
       <a class="p-navigation__link" href="/docs">Docs</a>
     </li>
     <li class="p-navigation__item">
-      <a href="https://discourse.ubuntu.com/c/mir" class="p-navigation__link">Community</a>
+      <a href="https://discourse.ubuntu.com/c/mir/15" class="p-navigation__link">Community</a>
     </li>
   </ul>
   <ul class="p-navigation__items global-nav">
